--- a/NavyAccountWeb/Views/Shared/_SchoolLayout.cshtml
+++ b/NavyAccountWeb/Views/Shared/_SchoolLayout.cshtml
@@ -94,7 +94,7 @@
                                     <a asp-controller="SRPaymentRecord" class="sidebar-link" asp-action="PaymentProposalupload">Payment Upload</a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a asp-controller="" class="sidebar-link" asp-action="">Print Discrepancy Report</a>
+                                    <a asp-controller="SRPaymentRecord" class="sidebar-link" asp-action="ViewDiscrepancyReport">Print Discrepancy Report</a>
                                 </li>
                                 <li class="sidebar-item">
                                     <a asp-controller="" class="sidebar-link" asp-action=""> Payment Verification</a>
