--- a/NavyAccountWeb/Views/SRSesssion/session.cshtml
+++ b/NavyAccountWeb/Views/SRSesssion/session.cshtml
@@ -37,7 +37,7 @@
 
 
 
-                @using (Html.BeginForm("session", "SRSession", FormMethod.Post))
+                @using (Html.BeginForm("MigrateToSession", "SRSession", FormMethod.Post))
                 {
     <div class="col-md-1">
         <div class="form-group">
