--- a/NavyAccountWeb/Views/Shared/_SchoolLayout.cshtml
+++ b/NavyAccountWeb/Views/Shared/_SchoolLayout.cshtml
@@ -77,7 +77,7 @@
                                     <a asp-controller="SRStudentRecord" class="sidebar-link" asp-action="OldStudent"> Former Students</a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a asp-controller="" class="sidebar-link" asp-action="">Student on Claim</a>
+                                    <a asp-controller="SRClaimRecord" class="sidebar-link" asp-action="ClaimPayment">Student on Claim</a>
                                 </li>
 
                             </ul>
