update project by addding some services and view

--- a/NavyAccountWeb/Views/Shared/_SchoolLayout.cshtml
+++ b/NavyAccountWeb/Views/Shared/_SchoolLayout.cshtml
@@ -100,7 +100,7 @@
                                     <a asp-controller="" class="sidebar-link" asp-action=""> Payment Verification</a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a asp-controller="" class="sidebar-link" asp-action="">Payment Update</a>
+                                    <a asp-controller="SRPaymentRecord" class="sidebar-link" asp-action="UpdatePaymentProposal">Payment Update</a>
                                 </li>
 
                             </ul>
@@ -177,7 +177,7 @@
                                     <a asp-controller="" class="sidebar-link" asp-action="">Nominal Role</a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a asp-controller="" class="sidebar-link" asp-action="">Students Reports </a>
+                                    <a asp-controller="SRPaymentRecord" class="sidebar-link" asp-action="Index2">Students Reports </a>
                                 </li>
 
 
