--- a/NavyAccountWeb/Views/SRSchoolFee/Create.cshtml
+++ b/NavyAccountWeb/Views/SRSchoolFee/Create.cshtml
@@ -2,9 +2,8 @@
 @{ ViewData["Title"] = "ViewSchool";
     Layout = "~/Views/Shared/_SchoolLayout.cshtml"; }
 
-< <div class="header">
+ <div class="header">
     <h1 class="header-title">
-        Fund Type
     </h1>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
