--- a/NavyAccountWeb/Views/SRPaymentRecord/Index2.cshtml
+++ b/NavyAccountWeb/Views/SRPaymentRecord/Index2.cshtml
@@ -3,12 +3,30 @@
     ViewData["Title"] = "Index2";
     Layout = "~/Views/Shared/_SchoolLayout.cshtml";
 }
-
+<div class="header">
+    <h1 class="header-title">
+    </h1>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="/Home/Index">Main</a></li>
+            <li class="breadcrumb-item active" aria-current="page">School Report</li>
+        </ol>
+    </nav>
+</div>
 <div class="row">
     <div class="col-12">
         <div class="card">
             <div class="card-header">
-                <h5 class="card-title">School report</h5>
+                <h5 class="card-title"></h5>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-header">
+                <h5 class="card-title">School Report</h5>
 
             </div>
 
