--- a/NavyAccountWeb/Views/SRPaymentRecord/PaymentProposal.cshtml
+++ b/NavyAccountWeb/Views/SRPaymentRecord/PaymentProposal.cshtml
@@ -15,7 +15,7 @@
 <body>
     <h6 style="text-align:center">RETRICTED</h6>
     <h2 style="text-align:center">NIGERIAN NAVY DIRECTORATE OF NON-PUBLIC FUND</h2>
-    <h2 style="text-align:center">NAVIP, DEPENDANT FUND AND WELFARE LOAN PORTFOLIOS</h2>
+    <h2 style="text-align:center">SCHOOL WALFARE SCHEME</h2>
     Payment Proposal: Produce On @DateTime.Now
     <div class="card-body">
         <table border="2" cellpadding="2" cellspacing="0" width="100%">
@@ -38,7 +38,7 @@
                 @foreach (var a in Model.distintrecord)
                 {
 
-                    @foreach(var b in Model.studentRecord)
+                    @foreach (var b in Model.studentRecord)
                     {
                         <tr>
                             <td>@b.Req_Number</td>
@@ -52,10 +52,10 @@
                         total += (decimal)b.Amount;
                     }
                     <tr>
-                       <td colspan="5" style="font-weight:bold">Total</td>
-                       <td style="font-weight:bold">@total</td>
+                        <td colspan="5" style="font-weight:bold">Total</td>
+                        <td style="font-weight:bold">@total</td>
                     </tr>
-                   
+
                 }
             }
         </table>
