--- a/NavyAccountWeb/Views/SRSchoolRecord/Index.cshtml
+++ b/NavyAccountWeb/Views/SRSchoolRecord/Index.cshtml
@@ -5,7 +5,7 @@
 
 < <div class="header">
     <h1 class="header-title">
-        Fund Type
+        School Record
     </h1>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
