update to the project

--- a/NavyAccountWeb/Views/Shared/_SchoolLayout.cshtml
+++ b/NavyAccountWeb/Views/Shared/_SchoolLayout.cshtml
@@ -139,7 +139,7 @@
                                     <a asp-controller="SRSesssion" class="sidebar-link" asp-action="session">New session processing</a>
                                 </li>
                                 <li class="sidebar-item">
-                                    <a asp-controller="" class="sidebar-link" asp-action="">Defaulter for the year</a>
+                                    <a asp-controller="SRPaymentRecord" class="sidebar-link" asp-action="Index3">Defaulter for the year</a>
                                 </li>
 
                             </ul>
