--- a/NavyAccountWeb/Views/SRClaimRecord/ClaimReportpdf.cshtml
+++ b/NavyAccountWeb/Views/SRClaimRecord/ClaimReportpdf.cshtml
@@ -56,8 +56,8 @@
                             <td>@a.Schoolname</td>
                             <td>@a.SchoolType</td>
                             <td>@a.ClassName</td>
-                            <td>@Math.Round(a.ClaimAmount.Value, 2)</td>
-                            <td>@Math.Round(a.FeeAmount.Value, 2)</td>
+                            <td>@Math.Round(b.ClaimAmount.Value, 2)</td>
+                            <td>@Math.Round(b.FeeAmount.Value, 2)</td>
 
                         </tr>
 
