--- a/NavyAccountWeb/Views/SRPaymentRecord/PaymentProposal.cshtml
+++ b/NavyAccountWeb/Views/SRPaymentRecord/PaymentProposal.cshtml
@@ -42,7 +42,7 @@
                     {
                         <tr>
                             <td>@b.Req_Number</td>
-                            <td>@b.Surname+" "+@b.FirstName+ " "+@b.MiddleName</td>
+                            <td>@b.Surname</td>
                             <td>@b.Schoolname</td>
                             <td>@a.SchoolCity</td>
                             <td>@a.SchoolType</td>
