--- a/NavyAccountWeb/Views/SRPaymentRecord/PaymentProposalBySchool.cshtml
+++ b/NavyAccountWeb/Views/SRPaymentRecord/PaymentProposalBySchool.cshtml
@@ -40,7 +40,7 @@
                 {
                     <tr>
                         <td>@b.Req_Number</td>
-                        <td>@b.Surname+" "+@b.FirstName+ " "+@b.MiddleName</td>
+                        <td>@b.Surname</td>
                         <td>@b.Schoolname</td>
                         <td>@b.SchoolCity</td>
                         <td>@b.SchoolType</td>
