--- a/NavyAccountWeb/Views/SRPaymentRecord/UpdatePaymentProposal.cshtml
+++ b/NavyAccountWeb/Views/SRPaymentRecord/UpdatePaymentProposal.cshtml
@@ -17,7 +17,7 @@
 </nav>
 </div>
 <div class="row">
-    <div class="col-12 col-xl-4">
+    <div class="col-12 col-xl-12">
         <div class="card">
             <div class="card-header">                                                                                                                                                                   
                 <h5 class="card-title">Update Payment Proposal</h5>
@@ -45,9 +45,9 @@
                         </div>
                     }
 
-                    <div class="form-group">
+                    @*<div class="form-group">
                         <input type="submit" name="Submit" id="Submit" class="btn btn-primary" value="Update" />
-                    </div>
+                    </div>*@
                 }
 
             </div>
