--- a/NavyAccountWeb/Views/SRPaymentRecord/DefaultersReport2.cshtml
+++ b/NavyAccountWeb/Views/SRPaymentRecord/DefaultersReport2.cshtml
@@ -15,7 +15,7 @@
 <body>
     <h6 style="text-align:center">RETRICTED</h6>
     <h2 style="text-align:center">NIGERIAN NAVY DIRECTORATE OF NON-PUBLIC FUND</h2>
-    <h2 style="text-align:center">NAVIP, DEPENDANT FUND AND WELFARE LOAN PORTFOLIOS</h2>
+    <h2 style="text-align:center">SCHOOL WALFARE SCHEME</h2>
     Defaulter Report: Produce On @DateTime.Now
     <div class="card-body">
         <table border="2" cellpadding="2" cellspacing="0" width="100%">
