--- a/NavyAccountWeb/Views/SRClaimRecord/ClaimReimbursment.cshtml
+++ b/NavyAccountWeb/Views/SRClaimRecord/ClaimReimbursment.cshtml
@@ -8,7 +8,7 @@
     <div class="col-12">
         <div class="card">
             <div class="card-header">
-                <h5 class="card-title">Student Cliam</h5>
+                <h5 class="card-title">Student Claim</h5>
 
             </div>
             <claim-reimbursment></claim-reimbursment>
