--- a/NavyAccountWeb/Views/InvestRegisterMvc/listofinvestment.cshtml
+++ b/NavyAccountWeb/Views/InvestRegisterMvc/listofinvestment.cshtml
@@ -1,16 +1,16 @@
 ﻿@model IEnumerable<NavyAccountCore.Models.InvestmentView>
 @{
-    ViewData["Title"] = "outstanding";
+    ViewData["Title"] = "CapitalMarket";
 }
 
 <div class="header">
     <h1 class="header-title">
-        OutStanding Investment
+        Capital Market
     </h1>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="Home/Index">Main</a></li>
-            <li class="breadcrumb-item active" aria-current="page">OutStanding Investment</li>
+            <li class="breadcrumb-item active" aria-current="page">Current Capital Market List</li>
         </ol>
     </nav>
 </div>
@@ -18,22 +18,70 @@
     <div class="col-12">
         <div class="card">
             <div class="card-header">
-                <h5 class="card-title">OutStanding Investment</h5>
+                <h5 class="card-title"></h5>
+            </div>
+            <div class="row">
+            <div class="col-md-2 mt-3">
+                <form asp-action="Export" method="post" asp-controller="InvestRegisterMvc">
+                    <input type="submit" class="btn btn-primary" value="Excel" />
+
+                </form>
             </div>
 
+            <div class="col-md-2 mt-3">
+                    <form asp-action="InvestmentCapital" method="get" asp-controller="InvestRegisterMvc">
+                    <i class="fa fa-download" aria-hidden="true"><input type="submit" class="btn btn-primary" value="PDF" /></i>
+                </form>
+            </div>
+            </div>
+         @*   <div class="col-md-4" style="margin-left:1000px">
+                @using (Html.BeginForm("InvestmentCapital", "InvestRegisterMvc", FormMethod.Get))
+                {
+                    @Html.AntiForgeryToken()
+
+                    <div class="form-group">
+                        <input type="submit" name="Submit" id="Submit" class="btn btn-primary" value="Print" />
+                    </div>
+                }
+            </div>*@
             @TempData["message"]
             <div class="card-body">
 
 
+                @using (Html.BeginForm("listofinvestment", "InvestRegisterMvc", FormMethod.Post))
+                {
+                    <div class="row">
+
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <input type="date" name="startdate" id="period" class="form-control" placeholder="Start Date" />
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <input type="date" name="enddate" id="endperiod" class="form-control" placeholder="End Date" />
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <input type="submit" name="Submit" id="submit" class="btn btn-primary" value="View" />
+                            </div>
+
+                        </div>
+
+                    </div>
+                }
                 <table class="table table-striped table-bordered">
                     <tr>
                         <th>Investment Type</th>
-                        <th>MatureDate</th>
+                        <th>Stock Name</th>
+                        <th>Transaction Type</th>
                         <th>Issuance Bank</th>
-                        <th>Receiving Bank</th>
+                        <th>Company</th>
                         <th>Amount</th>
-                        <th>Interest</th>
-                        <th>Tenure</th>
+                        <th>Unit</th>
+                        <th>Date</th>
 
                     </tr>
                     @if (Model != null)
@@ -42,12 +90,13 @@
                         {
                             <tr>
                                 <td>@a.InvestmentType</td>
-                                <td>@a.Maturingdate</td>
+                                <td>@a.StockName</td>
+                                <td>@a.TransactionType</td>
                                 <td>@a.issuancebank </td>
-                                <td>@a.receivingbank</td>
+                                <td>@a.company</td>
                                 <td>@a.Amount</td>
-                                <td>@a.interest</td>
-                                <td>@a.Tenure</td>
+                                <td>@a.unit</td>
+                                <td>@a.Date</td>
 
                             </tr>
                         }
